# neuron

./: .dir-locals.el  .gitignore  041726b3.html  2011401.html  2011402.html  2011403.html  2011404.html  2011405.html  2011406.html  2011407.html  2011501.html  2011502.html  2011503.html  2011504.html  2011505.html  2011506.html  2011701.html  2012101.html  2012301.html  2012401.html  2013101.html  2013501.html  2013701.html  2013702.html  2014401.html  2014601.html  2016401.html  2017401.html  4a6b25f1.html  535407ad.html  5e41fd32.html  6479cd5e.html  67c6f7a0.html  6f0f0bcc.html  778816d3.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  Linking.html  (+79 more)
.github/: FUNDING.yml
assets/: README.md
content/: config.dhall  first-post.md
dep/: README.md
doc/: Examples.md  Guide.md  Installing.md  Neuron v1.md  Philosophy.md  Plugins.md  Tutorial.md  Zettelkasten.md  head.html  index.md  neuron.dhall  next.md  search.md
exe/: Main.hs
guide/: .neuronignore  041726b3.md  2011401.md  2011402.md  2011403.md  2011404.md  2011405.md  2011406.md  2011407.md  (+75 more)
impulse/: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  hie.yaml  impulse.cabal  project.nix  shell.nix
impulse/.github/workflows/: publish.yaml
impulse/dep/aeson-gadt-th/: github.json
impulse/dep/alga/: github.json
impulse/dep/commonmark/: github.json
impulse/dep/dependent-sum-aeson-orphans/: github.json
impulse/dep/reflex-platform/: github.json
impulse/dep/relude/: github.json
impulse/src/: Main.hs
impulse/src/Impulse/: Cache.hs  Run.hs
neuron/: neuron.cabal
neuron/ghcjs/: README.md  impulse.js  q.js
neuron/lib/Data/Time/: DateMayTime.hs
neuron/lib/Neuron/Frontend/: Manifest.hs  Theme.hs  View.hs
neuron/lib/Neuron/Frontend/Route/Data/: Types.hs
neuron/lib/Neuron/Plugin/: Type.hs
neuron/lib/Neuron/Plugin/Plugins/: NeuronIgnore.hs
neuron/lib/Neuron/Zettelkasten/: Resolver.hs
neuron/lib/Neuron/Zettelkasten/Graph/: Build.hs
neuron/lib/Neuron/Zettelkasten/Zettel/: Error.hs
neuron/lib/Text/Pandoc/: Util.hs
neuron/lib/Text/URI/: Util.hs
neuron/src-bash/: neuron-search
neuron/src-dhall/Config/: Default.dhall  Type.dhall
neuron/src-js/: search.js
neuron/src-purescript/hello/: packages.dhall
neuron/src/Neuron/CLI/: New.hs  Search.hs
neuron/src/Neuron/Version/: RepoVersion.hs
neuron/src/Neuron/Zettelkasten/: Connection.hs  Graph.hs  ID.hs
neuron/src/Text/URI/: Util.hs
neuron/src/app/: Main.hs
neuron/src/app/Data/Structured/: Breadcrumb.hs  OpenGraph.hs
neuron/src/app/Data/Structured/OpenGraph/: Render.hs
neuron/src/app/Neuron/: Backend.hs  CLI.hs  Cache.hs  Config.hs  Gen.hs  LSP.hs  Org.hs  Reactor.hs  Reader.hs  Version.hs
neuron/src/app/Neuron/CLI/: App.hs  Logging.hs  New.hs  Open.hs  Parser.hs  Query.hs  Rib.hs  Search.hs  Types.hs
neuron/src/app/Neuron/Config/: Alias.hs  Orphans.hs
neuron/src/app/Neuron/Frontend/Static/: HeadHtml.hs  Html.hs  StructuredData.hs
neuron/src/app/Neuron/Plugin/: DirectoryFolgezettel.hs  Type.hs
neuron/src/app/Neuron/Reactor/: Build.hs
neuron/src/app/Neuron/Reader/: Org.hs
neuron/src/app/Neuron/Web/: Cache.hs  Generate.hs  HeadHtml.hs  Html.hs  Route.hs  StructuredData.hs  View.hs
neuron/src/app/Neuron/Web/Generate/: Route.hs
neuron/src/app/Neuron/Zettelkasten/: Resolver.hs
neuron/src/app/Neuron/Zettelkasten/Format/: Reader.hs
neuron/src/app/Neuron/Zettelkasten/Format/Reader/: Org.hs
neuron/src/app/Neuron/Zettelkasten/ID/: Scheme.hs
neuron/src/app/System/Directory/Contents/: Extra.hs
neuron/src/app/Web/: OpenGraph.hs
neuron/src/exe/: Main.hs
neuron/src/lib/Data/: TagTree.hs
neuron/src/lib/Data/Graph/: Labelled.hs
neuron/src/lib/Data/Graph/Labelled/: Algorithm.hs  Type.hs
neuron/src/lib/Data/Structured/: Breadcrumb.hs
neuron/src/lib/Data/Structured/OpenGraph/: Render.hs
neuron/src/lib/Data/Time/: DateMayTime.hs
neuron/src/lib/Data/YAML/: ToJSON.hs
neuron/src/lib/Neuron/: Backend.hs  Markdown.hs  Orphans.hs  Plugin.hs
neuron/src/lib/Neuron/CLI/: Search.hs
neuron/src/lib/Neuron/Cache/: Type.hs
neuron/src/lib/Neuron/Config/: Type.hs
neuron/src/lib/Neuron/Frontend/: CSS.hs  Common.hs  Impulse.hs  Manifest.hs  Route.hs  Theme.hs  View.hs  Widget.hs
neuron/src/lib/Neuron/Frontend/Query/: View.hs
neuron/src/lib/Neuron/Frontend/Route/: Data.hs
neuron/src/lib/Neuron/Frontend/Route/Data/: Types.hs
neuron/src/lib/Neuron/Frontend/Widget/: AutoScroll.hs  InvertedTree.hs
neuron/src/lib/Neuron/Frontend/Zettel/: CSS.hs  View.hs
neuron/src/lib/Neuron/Plugin/: DirectoryFolgezettel.hs  PluginData.hs  Type.hs
neuron/src/lib/Neuron/Plugin/Plugins/: DirTree.hs  DirectoryFolgezettel.hs  Feed.hs  Links.hs  NeuronIgnore.hs  Tags.hs  UpTree.hs
neuron/src/lib/Neuron/Reader/: Markdown.hs  Type.hs
neuron/src/lib/Neuron/Web/: Common.hs  HeadHtml.hs  Impulse.hs  Manifest.hs  Route.hs  Theme.hs  View.hs  Widget.hs  ZIndex.hs
neuron/src/lib/Neuron/Web/Cache/: Type.hs
neuron/src/lib/Neuron/Web/Query/: View.hs
neuron/src/lib/Neuron/Web/Route/: Data.hs
neuron/src/lib/Neuron/Web/Widget/: AutoScroll.hs  InvertedTree.hs
neuron/src/lib/Neuron/Web/Zettel/: CSS.hs  View.hs
neuron/src/lib/Neuron/Zettelkasten/: Connection.hs  Format.hs  Graph.hs  ID.hs  Query.hs  Resolver.hs  Zettel.hs
neuron/src/lib/Neuron/Zettelkasten/Format/Reader/: Type.hs
neuron/src/lib/Neuron/Zettelkasten/Graph/: Build.hs  Type.hs
neuron/src/lib/Neuron/Zettelkasten/Query/: Error.hs  Eval.hs  Graph.hs  Parser.hs  Theme.hs  Type.hs
neuron/src/lib/Neuron/Zettelkasten/Query/Error/: Internal.hs
neuron/src/lib/Neuron/Zettelkasten/Zettel/: Error.hs  Format.hs  Meta.hs  ParseError.hs  Parser.hs
neuron/src/lib/Text/Pandoc/: Util.hs
neuron/src/lib/Text/URI/: Util.hs
neuron/test/Neuron/: VersionSpec.hs
neuron/test/Neuron/Config/: AliasSpec.hs
neuron/test/Neuron/Reader/: OrgSpec.hs
neuron/test/Neuron/Zettelkasten/: IDSpec.hs  ZettelSpec.hs
neuron/test/Neuron/Zettelkasten/ID/: SchemeSpec.hs
neuron/test/Neuron/Zettelkasten/Query/: ParserSpec.hs
neuron/test/Neuron/Zettelkasten/Zettel/: ParserSpec.hs
(+315 files in other folders)
