cabal-version: 2.4
name: neuron
-- This version must be in sync with what's in Default.dhall
version: 0.5.2.0
license: AGPL-3.0-only
copyright: 2020 Sridhar Ratnakumar
maintainer: srid@srid.ca
author: Sridhar Ratnakumar
category: Web
homepage: https://neuron.zettel.page
bug-reports: https://github.com/srid/neuron/issues
synopsis:
  Haskell meets Zettelkasten, for your plain-text delight.
description:
  neuron is a system for managing your plain-text Zettelkasten notes.
extra-source-files:
  README.md
  CHANGELOG.md
data-files:
  src-js/search.js
  src-bash/neuron-search
  src-dhall/Config/*.dhall

source-repository head
    type: git
    location: https://github.com/srid/neuron

flag ghcid
    default: False
    manual: True

common ghc-common
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns

common library-common
  import: ghc-common
  default-language: Haskell2010
  build-depends:
    base >=4.12 && < 4.14,
    aeson,
    mtl,
    text,
    time,
    relude,
    filepath,
    algebraic-graphs >= 0.5,
    parser-combinators,
    containers,
    filepattern,
    megaparsec,
    commonmark,
    commonmark-extensions,
    commonmark-pandoc,
    pandoc-types,
    parsec,
    modern-uri,
    HsYAML,
    aeson-gadt-th,
    dependent-sum,
    dependent-sum-template,
    data-default,
    reflex,
    reflex-dom-core,
    reflex-dom-pandoc,
    clay,
    tagged

library
  import: library-common
  hs-source-dirs: src/lib
  exposed-modules:
    Neuron.Markdown
    Neuron.Zettelkasten.ID
    Neuron.Zettelkasten.Zettel
    Neuron.Zettelkasten.Zettel.Meta
    Neuron.Zettelkasten.Zettel.View
    Neuron.Zettelkasten.Connection
    Neuron.Zettelkasten.Query
    Neuron.Zettelkasten.Query.Error
    Neuron.Zettelkasten.Query.Eval
    Neuron.Zettelkasten.Query.Parser
    Neuron.Zettelkasten.Query.Theme
    Neuron.Zettelkasten.Query.View
    Neuron.Zettelkasten.Graph
    Neuron.Zettelkasten.Graph.Type
    Neuron.Web.Theme
    Text.Megaparsec.Simple
    Text.URI.Util
    Data.TagTree
    Data.PathTree
    Data.Graph.Labelled
    Data.Graph.Labelled.Type
    Data.Graph.Labelled.Algorithm
    Data.Graph.Labelled.Build

-- A trick to make ghcid reload if library dependencies change
-- https://haskell.zettel.page/2012605.html
common app-common
  import: library-common
  hs-source-dirs: src/app src/lib
  default-language: Haskell2010
  build-depends:
    base >=4.12 && < 4.14,
    aeson,
    clay -any,
    mtl,
    containers,
    directory,
    exceptions,
    file-embed,
    optparse-applicative,
    pandoc,
    skylighting-core,
    relude,
    iso8601-time,
    rib ^>=0.11,
    shake -any,
    time,
    text,
    modern-uri,
    foldl,
    filepath,
    dhall >= 1.30,
    which,
    unix,
    megaparsec >= 8.0,
    dependent-sum,
    dependent-sum-template,
    data-default,
    uuid,
    shake,
    with-utf8,
    shower
  if (!flag(ghcid))
    autogen-modules:
      Paths_neuron
    other-modules:
      Data.Graph.Labelled
      Data.Graph.Labelled.Algorithm
      Data.Graph.Labelled.Build
      Data.Graph.Labelled.Type
      Data.PathTree
      Data.Structured.Breadcrumb
      Data.TagTree
      Neuron.CLI
      Neuron.CLI.New
      Neuron.CLI.Rib
      Neuron.CLI.Search
      Neuron.CLI.Types
      Neuron.Config
      Neuron.Config.Alias
      Neuron.Version
      Neuron.Web.Generate
      Neuron.Web.Route
      Neuron.Web.View
      Neuron.Markdown
      Neuron.Zettelkasten.ID.Scheme
      Paths_neuron
      Text.Megaparsec.Simple

test-suite neuron-test
  import: app-common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base >=4.12 && < 4.14,
    relude,
    hspec,
    QuickCheck,
    time
  default-language:    Haskell2010
  if (!flag(ghcid))
    other-modules:
      Data.PathTreeSpec
      Data.TagTreeSpec
      Neuron.Config.AliasSpec
      Neuron.VersionSpec
      Neuron.Zettelkasten.ID.SchemeSpec
      Neuron.Zettelkasten.IDSpec
      Neuron.Zettelkasten.Query.ParserSpec
      Neuron.Zettelkasten.ZettelSpec

-- The executable stanza should always be at the end. The other project will
-- strip it to avoid non-core dependencies.
-- To profile: ghc-options: -fexternal-interpreter -prof -fprof-auto -rtsopts
executable neuron
  import: app-common
  main-is: Main.hs
