cabal-version: 2.4
name: rib-sample
version: 0.1.0.0
license: BSD-3-Clause
maintainer: your@email
author: Your Name
category: Web

executable rib-sample
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    build-depends:
        base,
        aeson,
        clay,
        dhall,
        lucid,
        path,
        rib ^>=0.7,
        shake,
        text,
